An acceptable diff table, finally
Many thanks to the [http://www.review-board.org/ Review Board] team, from whom
I shamelessly stole a lot of ideas (and also some code snippets)

--- pt-br ---------

Finalmente uma tabela de comparacao aceitavel

Um muito obrigado para a equipe do [http://www.review-board.org/ Review Board],
de quem eu na cara de pau roubei um monte de ideias (e tambem alguns trechos
de codigo)


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@626 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -158,22 +158,30 @@ table.diff pre {
     margin: 0;
     padding: 0;
     text-align: left;
-}
-
-table.diff tr {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    border: 0;
+    white-space: pre-wrap;      /* CSS 3 */
+    white-space: -moz-pre-wrap; /* Mozilla, 1999+ */
+    white-space: -pre-wrap;     /* Opera 4-6 */
+    white-space: -o-pre-wrap;   /* Opera 7 */
+    word-wrap: break-word;      /* IE 5.5+ */
 }
 
 table.diff td {
     padding: .05em .4em .05em .4em;
 }
 
-table.diff td.line_number {
+table.diff col.line_number {
     text-align: center;
-    border:solid gray;
+    border: solid gray;
     border-width: 0 1px 0 1px;
+}
+
+table.diff col.left {
+    border-right: 1px solid gray;
+    width: 50%;
+}
+
+table.diff col.right {
+    width: 50%;
 }
 
 tbody.unchanged {
