Removes HTML rendering code from Change class
--- pt-br ---------------------

Livra a class Change do codigo de renderizacao HTML


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@627 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -4,7 +4,7 @@
     <%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
     <div id="summary">
       <% @headline.changes.each do |change| %>
-        <%= change.render_summary -%>
+        <%= render_summary(change) -%>
         <br/>
       <% end %>
     </div>
