--- a/app/views/wiki/sourcediff.rhtml
+++ b/app/views/wiki/sourcediff.rhtml
@@ -1,4 +1,4 @@
 <% pagetext(@page.title, '(Comparing revisions %s and %s)' / @old_revision_num / @new_revision_num) do %>
-  <%= @renderer.render_wiki_diff(@old_revision.text, @new_revision.text) %>
+  <%= render_diff_table(@old_revision.diff(@new_revision_num.to_i))%>
   <%= render :partial => 'editbar' %>
 <% end %>
