Links from source diff to rendered diff page (and the other way)
--- pt-br --------------------------

Referencia a comparacao de codigo fonte a partir da renderizada (e vice-versa)


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@648 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -1,10 +1,5 @@
-<div class='toolbar editbar'>
-  <% unless @page.last_editor.nil? || @page.modified_at.nil? %>
-    <p>
-      <i><%= 'Last update by %s at %s' / @page.last_editor.login /
-             @page.modified_at.to_s(:rfc822) -%></i>
-    </p>
-  <% end %>
+<div class='toolbar bottombar'>
+  <%= render :partial => 'editor' %>
   <% if current_user.nil? then %>
     <span class='disabled'>
       <%= 'Edit'.t -%> <%= '(requires authentication)'.t -%>
