--- a/app/views/wiki/diff.rhtml
+++ b/app/views/wiki/diff.rhtml
@@ -1,4 +1,4 @@
 <% pagetext(@page.title, '(Comparing revisions %s and %s)' / @old_revision_num / @new_revision_num) do %>
   <%= @renderer.render_wiki_diff(@old_revision.text, @new_revision.text) %>
-  <%= render :partial => 'editbar' %>
+  <%= render :partial => 'diffbar' %>
 <% end %>
