Edits and displays feature status
--- pt-br ------------------

Edita e mostra situacao dos recursos


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@658 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_properties_edit.rhtml
+++ b/app/views/wiki/_properties_edit.rhtml
@@ -1,4 +1,7 @@
 <% if 'event' == (params[:kind] || @page.kind) %>
   <%= 'This event is planned for'.t -%>
   <%= date_select 'page', 'happens_at'  %>
+<% elsif 'feature'== (params[:kind] || @page.kind) %>
+  <%= check_box('page', 'done')  -%>
+  <%= 'This feature is done'.t %>
 <% end %>
