--- a/app/views/wiki/_properties_show.rhtml
+++ b/app/views/wiki/_properties_show.rhtml
@@ -2,4 +2,6 @@
   <%= image_tag 'calendar.png' -%>
   <%= 'This event was planned for'.t -%>
   <%= @page.happens_at.localize('%d %B %Y (%A)') -%>
+<% elsif 'feature' == @page.kind %>
+  <%= 'This feature is'.t + ' ' + (@page.done? ? 'done'.t : 'not done'.t) %>
 <% end %>
