Eliminates ugly if/then chain from page show and view templates
--- pt-br ----------------

Destroi a cadeia feiosa de if/then dos templates de edicao e exibicao de pagina


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@660 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_properties_edit.rhtml
+++ b/app/views/wiki/_properties_edit.rhtml
@@ -1,7 +1,3 @@
-<% if 'event' == (params[:kind] || @page.kind) %>
-  <%= 'This event is planned for'.t -%>
-  <%= date_select 'page', 'happens_at'  %>
-<% elsif 'feature'== (params[:kind] || @page.kind) %>
-  <%= check_box('page', 'done')  -%>
-  <%= 'This feature is done'.t %>
-<% end %>
+<% begin %>
+  <%= render(:partial => 'edit_' + (params[:kind] || @page.kind)) -%>
+<% rescue; end %>
