Includes a pretty icon in feature pages
--- pt-br ------------

Insere um icone bonitinho nas paginas de sugestao de recurso


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@661 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_show_feature.rhtml
+++ b/app/views/wiki/_show_feature.rhtml
@@ -1,1 +1,2 @@
+<%= image_tag(@page.done? ? 'done.png' : 'not-done.png') %>
 <%= 'This feature is'.t + ' ' + (@page.done? ? 'done'.t : 'not done'.t) %>
