Strikes finished features
--- pt-br -----------------

Risca as sugestoes terminadas


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@665 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -288,6 +288,10 @@ div#page_properties div.inner {
     background-color: #e8f2f2; 
 }
 
+a.done {
+    text-decoration: line-through;
+}
+
 #footer {
     padding: 4px 6px 2px 8px;
     font-size: x-small;
