Extracts headline linking code
--- pt-br ----------

Extrai codigo de criar links para manchetes


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@668 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/list.rhtml
+++ b/app/views/report/list.rhtml
@@ -16,8 +16,7 @@
   <% end %>
 <% @headlines.each do |headline|%>
     <p>
-      <%= link_to( h(headline.title(Translator.for(@locale))),
-                   @reporter.params_for(headline.rid) )%>
+      <%= headline_link(headline) %>
       <br/>
       <font size="-1">
         <i><%= h(headline.author) %></i>
