Moves formatting from HTML to CSS code
--- pt-br -----------------

Move codigo de formatacao de HTML para CSS


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@700 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/list.rhtml
+++ b/app/views/report/list.rhtml
@@ -11,19 +11,19 @@
   <% buttons = @reporter.buttons
      if ! buttons.empty? then %>
     <div class='toolbar channel_toolbar'>
-      <%= buttons.map { |b| instance_eval(b) }. join(' | ') -%>
+      <%= buttons.map { |b| instance_eval(b) }. join(' | ') %>
     </div> 
   <% end %>
-<% @headlines.each do |headline|%>
+  <% @headlines.each do |headline|%>
     <p>
       <%= headline_link(headline) %>
       <br/>
-      <font size="-1">
+      <span class="meta">
         <i><%= h(headline.author) %></i>
         (<%= headline.happened_at.relative_to_now %>)
-      </font>
+      </span>
     </p>
     <hr/>
-<% end %>
+  <% end %>
   </div>
 </div>
