Pulls up common code for wiki rendering to helper
--- pt-br -------------

Sobe o codigo comum de renderizacao wiki para o helper


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@704 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -1,7 +1,7 @@
 <% @title = "#{'Revision details'.t} - #{@headline.title(Translator.for(@locale))} (Motiro)" %>
 <% cache(:action => 'show', :suffix => 'summary', :locale => @locale) do %>
   <% pagetext('Revision %s' / truncate(@revision_id)) do %>
-    <%= @renderer.render_wiki_text(@headline.description(Translator.for(@locale))) %>
+    <%= render_wiki(@headline.description(Translator.for(@locale))) %>
     <div id="summary">
       <% @headline.changes.each do |change| %>
         <%= render_summary(change) -%>
